# QuestionVaultStudioKV

./: .gitignore  README.md  pyproject.toml  qv_compile.py
docs/: ARCHITECTURE.md  TAXONOMY_SCHEMA.md
imports/: paper.json  paper.json.pre-v1-migration.bak
output/export/: ckos.json  manifest.json  statistics.json
reference/: taxonomy.json
src/compiler_engine/: cli.py
src/compiler_engine/canonical_knowledge_object_generation/: __init__.py  builder.py  checksum.py  stage.py
src/compiler_engine/core/: __init__.py  base_model.py  config.py  errors.py  logging.py  schema_versions.py
src/compiler_engine/domain/: __init__.py  answer_ir.py  canonical_knowledge_object.py  cko.py  document_ast.py  educational_analysis.py  question_ir.py  relationship_graph.py  (+2 more)
tests/canonical_knowledge_object_generation/: test_builder.py  test_checksum.py  test_stage.py
tests/core/: test_base_model.py  test_config.py  test_errors.py  test_logging.py
tests/domain/: test_answer_ir.py  test_canonical_knowledge_object.py  test_cko.py  test_document_ast.py  test_educational_analysis.py  test_question_ir.py  test_relationship_graph.py  test_taxonomy.py  test_validation_report.py
tests/educational_analysis/: test_reference.py  test_stage.py  test_verification.py
tests/paper_import/: test_schema.py  test_stage.py  test_validation.py
tests/pipeline/: test_context.py  test_registry.py  test_runner.py  test_stage.py  test_workspace.py
tests/publishing/: test_models.py  test_stage.py  test_statistics.py  test_writer.py
tests/relationship_resolution/: test_graph.py  test_stage.py
(+22 files in other folders)
