[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "compiler-engine"
version = "0.1.0"
description = "QuestionVault Studio Python engine: paper.json to publishable Canonical Knowledge Objects"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
]

[project.scripts]
qv-compile = "compiler_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
